HP-2008-06-23-0: Bugfix:    qrsh -cwd pwd - test compared pathes with and without
                            automount prefix
                 Changed:   clients/qrsh/check.61.exp
                 Issue:     197
                 Review:    JG

CR-2008-06-20-0: Cleanup:   Rework of expect timeout handling for
                            hedeby_mod_* util procedures. Settings should now
                            also work for slower systems. On errors the
                            procedures will also return faster.

AP-2008-06-20-0: Bugfix:    Removed the possibility to choose the additional
                            checktrees from the list.
                 Review:    CR

CR-2008-06-19-0: Enhancem.: Hedeby: added merged logfile feature
                            - enhanced get_all_log_files() to create one
                              merged log file
                            - enhanced exec_start_runlevel_hooks by parameters
                              about current test status
                            - hedeby start runlevel hook now will create
                              merged log file when test fails and stores it
                              into hedeby dist subdirectory "TS_LOG_FILES"
                 Review:    RH

JG-2008-06-16-0: Enhancem.: Added test for IZ 2615 in check 
                            system_tests/qmaster/reporting.
                 Review:    HP

AP-2008-06-16-2: Bugfix:    Fixed AP-2008-06-16-1 commit.

CR-2008-06-16-1: Hotfix:    Fixed hedeby config_generic calls
                 Review:    AP

AP-2008-06-16-1: Enhancem.: o tst configuration procedures should use config_generic
                            o config_generic should add ports into user configuration
                              ports can be choosed from the configured user's portlist
                            o new way of display of configured hosts, also the usage
                              can be displayed